--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -10,6 +10,8 @@ resolver 127.0.0.11 valid=10s;
 server {
     listen 80;
     listen [::]:80;
+    listen 443;
+    listen [::]:443;
     client_max_body_size 200M;
 
     location /static/ {
