--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -52,6 +52,7 @@ services:
       - media:/app/media
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate &&
+                    python manage.py recreate_backround_tasks &&
                     gunicorn -w 4 -k uvicorn.workers.UvicornWorker project.asgi:app --bind 0.0.0.0:8000"
                     # python manage.py create_moder_group &&
                     # python manage.py create_periodic_task_for_update_exchange_info &&
@@ -77,6 +78,7 @@ services:
     volumes:
       - static:/static
       - media:/media
+      - ./nginx/certs:/etc/nginx/certs
     ports:
       # - '81:80'
       - '80:80'
