--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -12,6 +12,11 @@ server {
     listen [::]:80;
     listen 443;
     listen [::]:443;
+    server_name api.moneyswap.online;
+
+    ssl_certificate     /etc/nginx/certs/cert.pem;
+    ssl_certificate_key /etc/nginx/certs/key.pem;
+
     client_max_body_size 200M;
 
     location /static/ {
