--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -54,7 +54,6 @@ services:
                     python manage.py migrate &&
                     gunicorn -w 4 -k uvicorn.workers.UvicornWorker project.asgi:app --bind 0.0.0.0:8000"
                     # python manage.py collectstatic --no-input &&
-                    # python manage.py recreate_backround_tasks &&
                     # python manage.py create_moder_group &&
                     # python manage.py create_periodic_task_for_update_exchange_info &&
                     # python manage.py create_periodic_task_for_parse_actual_course &&
@@ -64,8 +63,9 @@ services:
                     # python manage.py create_periodic_task_for_delete_reviews &&
                     # python manage.py create_cities &&
                     # python manage.py create_moderator_group &&
-                    # python manage.py periodic_task_for_parse_cash_courses &&
                     # python manage.py createsuperuser --no-input &&
+                    # python manage.py periodic_task_for_parse_cash_courses &&
+                    # python manage.py recreate_backround_tasks &&
                     # python manage.py parse_reviews_selenium &&
                     # uvicorn project.asgi:app --host 0.0.0.0"
 
@@ -139,14 +139,15 @@ services:
       - redis_db
       - psql_db
       # - rabbitmq3
+    cpus: '2.0'
     logging:
       driver: "json-file"
       options:
           max-size: "20m"
-    deploy:
-      resources:
-        limits:
-          cpus: '1.0'
+    # deploy:
+    #   resources:
+    #     limits:
+    #       cpus: '1.0'
 
 
   celery_beat:
