--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -36,6 +36,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    location /test_swift_sepa {
+        set $bot_api_service bot;
+        proxy_pass http://$bot_api_service:8001;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
     location /webhook {
         set $bot_api_service bot;
         proxy_pass http://$bot_api_service:8001;
