--- a/django_fastapi/requirements.txt
+++ b/django_fastapi/requirements.txt
@@ -13,6 +13,7 @@ billiard==4.2.0
 bleach==6.1.0
 bottle==0.12.25
 celery==5.3.5
+celery_once==3.0.1
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.2
@@ -20,6 +21,7 @@ click==8.1.7
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.3.0
+CProfileV==1.0.7
 cron-descriptor==1.4.0
 cryptography==42.0.5
 Django==4.2.7
@@ -27,6 +29,7 @@ django-admin-action-forms==1.2.1
 django-celery-beat==2.5.0
 django-debug-toolbar==4.2.0
 django-dynamic-admin-forms==2.2.1
+django-prometheus==2.3.1
 django-summernote==0.8.20.0
 django-timezone-field==6.0.1
 dnspython==2.6.1
@@ -59,6 +62,7 @@ outcome==1.3.0.post0
 packaging==24.1
 passlib==1.7.4
 Pillow==10.1.0
+prometheus-fastapi-instrumentator==7.0.0
 prometheus_client==0.20.0
 prompt-toolkit==3.0.40
 psycopg2-binary==2.9.9
