--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -1,23 +1,23 @@
 services:
 
-  firefox:
-    image: selenium/standalone-firefox:4.16.1-20231219
-    restart: on-failure
-    container_name: firefox
-    shm_size: 2g
-    ports:
-      - "4444:4444"
-      - "7900:7900"
-    networks:
-      - common-network
-    volumes:
-      - selenium-data:/home/seluser/Downloads
-    environment:
-      - SE_SESSION_REQUEST_TIMEOUT=3600
-      - SE_NODE_SESSION_TIMEOUT=3600
-      - SE_VNC_PASSWORD=1234
-      - SE_NODE_OVERRIDE_MAX_SESSIONS=true 
-      - SE_NODE_MAX_SESSIONS=5
+  # firefox:
+  #   image: selenium/standalone-firefox:4.16.1-20231219
+  #   restart: on-failure
+  #   container_name: firefox
+  #   shm_size: 2g
+  #   ports:
+  #     - "4444:4444"
+  #     - "7900:7900"
+  #   networks:
+  #     - common-network
+  #   volumes:
+  #     - selenium-data:/home/seluser/Downloads
+  #   environment:
+  #     - SE_SESSION_REQUEST_TIMEOUT=3600
+  #     - SE_NODE_SESSION_TIMEOUT=3600
+  #     - SE_VNC_PASSWORD=1234
+  #     - SE_NODE_OVERRIDE_MAX_SESSIONS=true 
+  #     - SE_NODE_MAX_SESSIONS=5
   #   deploy:
   #     resources:
   #       limits:
@@ -44,7 +44,7 @@ services:
       - pgbouncer
       # - redis_db
       # - celery_worker
-      - firefox
+      # - firefox
     logging:
       driver: "json-file"
       options:
@@ -133,7 +133,7 @@ services:
     command: sh -c 'celery -A project worker -l info -c 4'
     environment:
       - POSTGRES_HOST=psql_db
-      - SELENIUM_DRIVER=firefox
+      # - SELENIUM_DRIVER=firefox
       - REDIS_HOST=redis_db
       - PGBOUNCER_HOST=pgbouncer
     env_file:
@@ -186,7 +186,7 @@ services:
       - common-network
     environment:
       - POSTGRES_HOST=psql_db
-      - SELENIUM_DRIVER=firefox
+      # - SELENIUM_DRIVER=firefox
       - REDIS_HOST=redis_db
       - PGBOUNCER_HOST=pgbouncer
     env_file:
@@ -232,7 +232,7 @@ services:
       - pgbouncer_data:/var/run/pgbouncer
 
 volumes:
-  selenium-data:
+  # selenium-data:
   postgres-data:
   redis_data:
   # rabbitmq_data:
