--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -214,7 +214,7 @@ services:
     mem_limit: 4g
     volumes:
       - postgres-data:/var/lib/postgresql/data
-    command: postgres -c max_connections=200
+    command: postgres -c max_connections=200 -c shared_buffers=2g
     logging:
       driver: "json-file"
       options:
