--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -214,8 +214,8 @@ services:
     mem_limit: 8g
     volumes:
       - postgres-data:/var/lib/postgresql/data
-    command: postgres -c max_connections=200 -c shared_buffers=2GB
-    #command: postgres -c max_connections=100 -c shared_buffers=2GB -c work_mem=16MB -c maintenance_work_mem=512MB -c effective_cache_size=6GB
+    # command: postgres -c max_connections=200 -c shared_buffers=2GB
+    command: postgres -c max_connections=100 -c shared_buffers=2GB -c work_mem=16MB -c maintenance_work_mem=512MB -c effective_cache_size=6GB
     logging:
       driver: "json-file"
       options:
