--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -18,6 +18,10 @@ server {
 
     client_max_body_size 200M;
 
+    location /favicon.ico {
+        return 301 /static/general_models/favicon.ico;
+    }
+
     location /static/ {
         autoindex on;
         alias /static/;
