--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -37,7 +37,7 @@ server {
     }
 
     location /send_mass_message {
-        set $bot_api_service bot;
+        set $bot_api_service money_bot;
         proxy_pass http://$bot_api_service:8001;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -69,7 +69,7 @@ server {
     }
 
     location /test_swift_sepa {
-        set $bot_api_service bot;
+        set $bot_api_service money_bot;
         proxy_pass http://$bot_api_service:8001;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -77,7 +77,7 @@ server {
     }
 
     location /webhook {
-        set $bot_api_service bot;
+        set $bot_api_service money_bot;
         proxy_pass http://$bot_api_service:8001;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Proto $scheme;
