--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -55,8 +55,8 @@ services:
       - media:/app/media
     command: sh -c "python manage.py makemigrations &&
                     python manage.py migrate &&
-                    gunicorn -w 2 -k uvicorn.workers.UvicornWorker project.asgi:app --bind 0.0.0.0:8000"
-                    # uvicorn project.asgi:app --host 0.0.0.0"
+                    uvicorn project.asgi:app --host 0.0.0.0"
+                    # gunicorn -w 2 -k uvicorn.workers.UvicornWorker project.asgi:app --bind 0.0.0.0:8000"
                     # python manage.py parse_reviews_selenium &&
                     # python manage.py add_time_create_for_exchanges &&
                     # python manage.py collectstatic --no-input &&
