--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -76,6 +76,22 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    location /send_comment_notification_to_exchange_admin {
+        set $bot_api_service money_bot;
+        proxy_pass http://$bot_api_service:8001;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
+    location /send_comment_notification_to_review_owner {
+        set $bot_api_service money_bot;
+        proxy_pass http://$bot_api_service:8001;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
     location /send_to_tg_group {
         set $bot_api_service send_bot;
         proxy_pass http://$bot_api_service:8002;
