--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -44,6 +44,14 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+    location /test_domain {
+        # set $bot_api_service money_bot;
+        proxy_pass https://moneyswap-nextjs-78ranfcxu-t-apps.vercel.app/;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+
     location /send_mass_message_info {
         set $bot_api_service bot;
         proxy_pass http://$bot_api_service:8002;
