--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -8,6 +8,8 @@ resolver 127.0.0.11 valid=10s;
 
 
 server {
+    server_name api.moneyswap.online;
+
     listen 80;
     listen [::]:80;
     listen 443 ssl;
@@ -39,14 +41,6 @@ server {
     location /send_mass_message {
         set $bot_api_service money_bot;
         proxy_pass http://$bot_api_service:8001;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    location /test_domain {
-        # set $bot_api_service money_bot;
-        proxy_pass https://moneyswap-nextjs-78ranfcxu-t-apps.vercel.app/;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -157,4 +151,27 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
+}
+
+
+server {
+    server_name www.app.moneyswap.online;
+    
+    listen 80;
+    listen [::]:80;
+    listen 443 ssl;
+    # listen [::]:443;
+
+    ssl_certificate     /etc/nginx/certs/cert.pem;
+    ssl_certificate_key /etc/nginx/certs/key.pem;
+
+    client_max_body_size 200M;
+
+    location / {
+        # set $backend_service django_fastapi;
+        proxy_pass https://moneyswap-nextjs-78ranfcxu-t-apps.vercel.app/;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 }
