--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -169,7 +169,29 @@ server {
 
     location / {
         # set $backend_service django_fastapi;
-        proxy_pass https://moneyswap-nextjs-78ranfcxu-t-apps.vercel.app/;
+        proxy_pass https://moneyswap-webapp-t-apps.vercel.app/;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
+
+server {
+    server_name www.app.moneyswap.online/;
+    
+    listen 80;
+    listen [::]:80;
+    listen 443 ssl;
+    # listen [::]:443;
+
+    ssl_certificate     /etc/nginx/certs/cert.pem;
+    ssl_certificate_key /etc/nginx/certs/key.pem;
+
+    client_max_body_size 200M;
+
+    location / {
+        # set $backend_service django_fastapi;
+        proxy_pass https://moneyswap-nextjs-t-apps.vercel.app/;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
