--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -177,7 +177,7 @@ server {
 }
 
 server {
-    server_name www.app.moneyswap.online/;
+    server_name www.moneyswap.online/;
     
     listen 80;
     listen [::]:80;
