--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -149,6 +149,8 @@ server {
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        add_header X-Served-By "nginx-moneyswap" always;
     }
 
 }
@@ -173,6 +175,8 @@ server {
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        add_header X-Served-By "nginx-moneyswap" always;
     }
 }
 
@@ -195,5 +199,7 @@ server {
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        add_header X-Served-By "nginx-moneyswap" always;
     }
 }
