--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -170,8 +170,7 @@ server {
     client_max_body_size 200M;
 
     location / {
-        # set $backend_service django_fastapi;
-        proxy_pass https://moneyswap-webapp-t-apps.vercel.app/;
+        proxy_pass https://moneyswap-webapp-t-apps.vercel.app;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -181,7 +180,7 @@ server {
 }
 
 server {
-    server_name www.moneyswap.online/;
+    server_name www.moneyswap.online;
     
     listen 80;
     listen [::]:80;
@@ -194,8 +193,7 @@ server {
     client_max_body_size 200M;
 
     location / {
-        # set $backend_service django_fastapi;
-        proxy_pass https://moneyswap-nextjs-t-apps.vercel.app/;
+        proxy_pass https://moneyswap-nextjs-t-apps.vercel.app;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
