--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -216,7 +216,7 @@ server {
     client_max_body_size 200M;
 
     location / {
-        proxy_pass https://moneyswap-nextjs-2h2kz47v9-t-apps.vercel.app/;
+        proxy_pass https://moneyswap-nextjs-t-apps.vercel.app;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
