--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -218,7 +218,7 @@ server {
     location / {
         proxy_pass https://moneyswap-nextjs-t-apps.vercel.app;
         # proxy_set_header Host $http_host;
-        proxy_set_header Host https://moneyswap-nextjs-t-apps.vercel.app;
+        proxy_set_header Host moneyswap-nextjs-t-apps.vercel.app;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
