--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -170,8 +170,8 @@ server {
     client_max_body_size 200M;
 
     location / {
-        proxy_pass https://moneyswap-webapp-t-apps.vercel.app/;
-        proxy_set_header Host moneyswap-webapp-t-apps.vercel.app;
+        proxy_pass https://moneyswap-webapp.vercel.app;
+        proxy_set_header Host moneyswap-webapp.vercel.app;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -194,8 +194,8 @@ server {
     client_max_body_size 200M;
 
     location / {
-        proxy_pass https://moneyswap-nextjs-t-apps.vercel.app/;
-        proxy_set_header Host moneyswap-nextjs-t-apps.vercel.app;
+        proxy_pass https://moneyswap-nextjs.vercel.app;
+        proxy_set_header Host moneyswap-nextjs.vercel.app;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
