--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -225,7 +225,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-        proxy_ssl_verify on;
+        proxy_ssl_verify off;
         add_header X-Served-By "nginx-moneyswap" always;
     }
 }
