--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -18,6 +18,11 @@ server {
     ssl_certificate     /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
 
+    proxy_connect_timeout 90s;
+    proxy_send_timeout    90s;
+    proxy_read_timeout    90s;
+    send_timeout          90s;
+
     client_max_body_size 200M;
 
     # location /favicon.ico {
