--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -18,6 +18,9 @@ server {
     ssl_certificate     /etc/nginx/certs/cert.pem;
     ssl_certificate_key /etc/nginx/certs/key.pem;
 
+    proxy_http_version 1.1;
+    proxy_set_header Connection "";
+    
     proxy_connect_timeout 90s;
     proxy_send_timeout    90s;
     proxy_read_timeout    90s;
