--- a/django_fastapi/docker-compose.yml
+++ b/django_fastapi/docker-compose.yml
@@ -215,6 +215,7 @@ services:
       - ./.env
     cpus: '2.0'
     mem_limit: 8g
+    shm_size: '1g'
     volumes:
       - postgres-data:/var/lib/postgresql/data
     # command: postgres -c max_connections=200 -c shared_buffers=2GB
