--- a/django_fastapi/nginx/default.conf
+++ b/django_fastapi/nginx/default.conf
@@ -156,8 +156,8 @@ server {
 
 
     location / {
-        set $backend_service django_fastapi;
-        proxy_pass http://$backend_service:8000;
+        # set $backend_service django_fastapi;
+        proxy_pass http://django_fastapi:8000;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
